# rogata_engine

./: CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-package.yml  python-publish.yml
docs/: Makefile  modules.rst
docs/source/: .usage.rst.swp  conf.py  how_it_works.rst  index.rst  tutorials.rst  usage.rst  what_is_rogata.rst
scripts/: .rogata_library.py.swp  calibrate_scene.py  contour_save_2.npy  large_ring_hole.npy  object_tracker.py  red_hiding_place.npy  requirements.txt  rogata_library.py  rogata_library.py.patch  small_ring.npy  test_area_detection.py  test_library.py  test_ray_casting.py  walled_target.npy  walls.npy
scripts/area_detection_test/: area_detection_client.py  area_detection_map.py  area_detection_scene.py  rectangle.npy  small_ring_hole.npy
scripts/ray_casting_test/: left_rock.npy  ray_casting_client.py  ray_casting_map.py  right_rock.npy  right_rock_hole.npy  test_ray_casting.py  white_hole.npy
scripts/rogata_library/: setup.py
scripts/test_nodes/: .custom_client.py.swp  color_perception.py  custom_client.py  custom_service.py  detection_test.py  event_subscriber.py  large_ring.npy  sstest_name.npy  test_name.npy  visibility_box.npy
scripts/visibility_test/: test_visibility.py  visibility_test_client.py  visibility_test_map.py
src/: requirements.txt  setup.py
src/rogata_library/: .rogata_library.py.swp  __init__.py  rogata_library.py
srv/: CheckInside.srv  GetPos.srv  RequestDist.srv  RequestInter.srv  RequestPos.srv  SetPos.srv
test_nodes/: .detection_test.py.swp  contour_save.npy  detection_test.py  marker_perception.py
test_videos/: extract_frame.py
tests/: test_game_object.py
