<?xml version="1.0"?>
<package format="2">
  <name>rogata_engine</name>
  <version>0.0.0</version>
  <description>The Robotic Games Tabletop Engine package</description>

  <maintainer email="jan@todo.todo">Jan Baumgaertner</maintainer>

  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/Robokart-Engine</url> -->




  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
