<?xml version="1.0"?>
<package format="2">
  <name>rogata_engine</name>
  <version>0.0.0</version>
  <description>The Robotic Games Tabletop Engine package</description>

  <maintainer email='jan.baumgaertner@ziti.uni-heidelberg.de'>Jan Baumgaertner</maintainer>
  <author email='jan.baumgaertner@ziti.uni-heidelberg.de'>Jan Baumgaertner</author>

  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url> https://rogata-engine.readthedocs.io/en/latest/what_is_rogata.html</url> 


  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-opencv</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
